// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`azure-resource-visualizer - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Analyze Azure resource groups and generate detailed architecture diagrams as Mermaid or Draw.io. Supports live Azure resource discovery, sketch/description-to-diagram conversion, and detailed relationship mapping. WHEN: create architecture diagram, visualize Azure resources, show resource relationships, generate Mermaid diagram, analyze resource group, diagram my resources, architecture visualization, resource topology, map Azure infrastructure, draw.io diagram, sketch to diagram, convert sketch to architecture, generate draw.io, create draw.io from azure. DO NOT USE FOR: IaC-generation, drift detection, cost analysis, security assessment, performance tuning",
  "extractedKeywords": [
    "analysis",
    "analyze",
    "app service",
    "architecture",
    "assessment",
    "authentication",
    "azure",
    "cli",
    "container",
    "conversion",
    "convert",
    "cost",
    "create",
    "description-to-diagram",
    "detailed",
    "detection",
    "diagram",
    "diagrams",
    "discovery",
    "draw",
    "drift",
    "from",
    "function",
    "generate",
    "group",
    "groups",
    "iac-generation",
    "identity",
    "infrastructure",
    "key vault",
    "live",
    "mapping",
    "mcp",
    "mermaid",
    "monitor",
    "performance",
    "rbac",
    "relationship",
    "relationships",
    "resource",
    "resources",
    "security",
    "show",
    "sketch",
    "sql",
    "storage",
    "supports",
    "topology",
    "tuning",
    "visualization",
    "visualize",
    "visualizer",
    "vnet",
    "when",
  ],
  "name": "azure-resource-visualizer",
}
`;

exports[`azure-resource-visualizer - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "analysis",
  "analyze",
  "app service",
  "architecture",
  "assessment",
  "authentication",
  "azure",
  "cli",
  "container",
  "conversion",
  "convert",
  "cost",
  "create",
  "description-to-diagram",
  "detailed",
  "detection",
  "diagram",
  "diagrams",
  "discovery",
  "draw",
  "drift",
  "from",
  "function",
  "generate",
  "group",
  "groups",
  "iac-generation",
  "identity",
  "infrastructure",
  "key vault",
  "live",
  "mapping",
  "mcp",
  "mermaid",
  "monitor",
  "performance",
  "rbac",
  "relationship",
  "relationships",
  "resource",
  "resources",
  "security",
  "show",
  "sketch",
  "sql",
  "storage",
  "supports",
  "topology",
  "tuning",
  "visualization",
  "visualize",
  "visualizer",
  "vnet",
  "when",
]
`;
